--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mid-autumn quiz!</title>
+  <link rel="shortcut icon" href="/favicon.ico">
 </head>
 <body onload="login();">
   <div>Logging you in with Google</div>
