--- a/public/quiz.html
+++ b/public/quiz.html
@@ -9,6 +9,7 @@
   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
   crossorigin="anonymous"></script>
   <script src="questions.js"></script>
+  <link rel="shortcut icon" href="/favicon.ico">
 </head>
 <body onload="onload()">
 	<div class="bar">
