--- a/public/quiz.html
+++ b/public/quiz.html
@@ -67,7 +67,7 @@
 		function onload(){
 			$.ajax({
 				type: "GET",
-				url:"https://mid-autumn.herokuapp.com"
+				url:"https://mid-autumn.herokuapp.com/getuserinfo"
 			}).done (function (data){
 				alert(data);
 			});
