--- a/public/quiz.html
+++ b/public/quiz.html
@@ -6,7 +6,7 @@
 	<title>Mid-Autumn quiz</title>
 	<link rel="stylesheet" href="newmcq.css">
 	<script
-  src="http://code.jquery.com/jquery-3.1.0.min.js"
+  src="https://code.jquery.com/jquery-3.1.0.min.js"
   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
   crossorigin="anonymous"></script>
   <script src="questions.js"></script>
