--- a/public/quiz.html
+++ b/public/quiz.html
@@ -36,7 +36,7 @@
     var attemptedquestions = [];
 		var selection = 0;
 		var answerlocked = 0;
-		function $(object){
+		function lookup(object){
 			return document.getElementById(object);
 		}
     function getRandomInt(min, max) {
@@ -76,15 +76,15 @@
       if (localStorage.getItem("attempts")){
         attempts = Number(localStorage.getItem("attempts"));
       }
-			$("question").innerHTML = JSON.parse(question).question;
-			$("option1").innerHTML = JSON.parse(question).option1 + "<img class='wrong' id='answerwrong1' src='wrong.png'/>";
-			$("option2").innerHTML = JSON.parse(question).option2 + "<img class='wrong' id='answerwrong2' src='wrong.png'/>";
+			lookup("question").innerHTML = JSON.parse(question).question;
+			lookup("option1").innerHTML = JSON.parse(question).option1 + "<img class='wrong' id='answerwrong1' src='wrong.png'/>";
+			lookup("option2").innerHTML = JSON.parse(question).option2 + "<img class='wrong' id='answerwrong2' src='wrong.png'/>";
 			switch(JSON.parse(question).answer){
 				case 1:
-					$("option1").innerHTML = JSON.parse(question).option1 + "<img class='correct' id='answercorrect' src='correct.png'/>";
+					lookup("option1").innerHTML = JSON.parse(question).option1 + "<img class='correct' id='answercorrect' src='correct.png'/>";
 				break;
 				case 2:
-					$("option2").innerHTML = JSON.parse(question).option2 + "<img class='correct' id='answercorrect' src='correct.png'/>";
+					lookup("option2").innerHTML = JSON.parse(question).option2 + "<img class='correct' id='answercorrect' src='correct.png'/>";
 				break;
 			}
 		}
@@ -92,15 +92,15 @@
 			if (answerlocked == 0){
 				if (option == selection){
 					answerlocked = 1;
-          $("next").style.display = "block";
-          setTimeout(function(){$("next").style.height="4vh";},1);
-					$("option"+option).style.boxShadow = "0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)";
-					$("answercorrect").style.display = "inline";
-					setTimeout(function(){$("answercorrect").style.opacity = "1";},1);
+          lookup("next").style.display = "block";
+          setTimeout(function(){lookup("next").style.height="4vh";},1);
+					lookup("option"+option).style.boxShadow = "0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)";
+					lookup("answercorrect").style.display = "inline";
+					setTimeout(function(){lookup("answercorrect").style.opacity = "1";},1);
 					if (option != JSON.parse(question).answer){
-						$("option"+option).innerHTML = JSON.parse(question)["option"+option] + "<img class='wrong' id='answerwrong"+option+"' src='wrong.png'/><br/><br/>";
-						$("answerwrong"+option).style.display = "inline";
-						setTimeout(function(){$("answerwrong"+option).style.opacity = "1";},1);
+						lookup("option"+option).innerHTML = JSON.parse(question)["option"+option] + "<img class='wrong' id='answerwrong"+option+"' src='wrong.png'/><br/><br/>";
+						lookup("answerwrong"+option).style.display = "inline";
+						setTimeout(function(){lookup("answerwrong"+option).style.opacity = "1";},1);
             if (attempts > 3){
               alert("You have scored " + correctanswers + " out of 5 questions!");
               localStorage.removeItem("attempts");
@@ -116,7 +116,7 @@
               correctanswers = Number(localStorage.getItem("correctanswers"));
             }
             correctanswers += 1;
-						$("option"+option).innerHTML = JSON.parse(question)["option"+option] + "<img class='correct' id='answercorrect' src='correct.png' style='display:inline'/><br/><br/>";
+						lookup("option"+option).innerHTML = JSON.parse(question)["option"+option] + "<img class='correct' id='answercorrect' src='correct.png' style='display:inline'/><br/><br/>";
             if (attempts > 3){
               alert("You have scored " + correctanswers + " out of 5 questions!");
               localStorage.removeItem("attempts");
@@ -130,19 +130,19 @@
 					}
 				}
 				else if(selection != 0){
-					$("option"+selection).style.boxShadow = "0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)";
+					lookup("option"+selection).style.boxShadow = "0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)";
 					if (JSON.parse(question).answer == selection){
-						$("option"+selection).innerHTML = JSON.parse(question)["option"+selection] + "<img class='correct' id='answercorrect' src='correct.png'/>";
+						lookup("option"+selection).innerHTML = JSON.parse(question)["option"+selection] + "<img class='correct' id='answercorrect' src='correct.png'/>";
 					} else {
-						$("option"+selection).innerHTML = JSON.parse(question)["option"+selection] + "<img class='wrong' id='answerwrong' src='wrong.png'/>";
+						lookup("option"+selection).innerHTML = JSON.parse(question)["option"+selection] + "<img class='wrong' id='answerwrong' src='wrong.png'/>";
 					}
 				}
 				if (answerlocked == 0){
-					$("option"+option).style.boxShadow = "0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)";
+					lookup("option"+option).style.boxShadow = "0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)";
 					if (JSON.parse(question).answer == option){
-						$("option"+option).innerHTML = JSON.parse(question)["option"+option] + "<img class='correct' id='answercorrect' src='correct.png'/>" + "<br/>(Press again to confirm your answer)";
+						lookup("option"+option).innerHTML = JSON.parse(question)["option"+option] + "<img class='correct' id='answercorrect' src='correct.png'/>" + "<br/>(Press again to confirm your answer)";
 					} else {
-						$("option"+option).innerHTML = JSON.parse(question)["option"+option] + "<img class='wrong' id='answerwrong' src='wrong.png'/>" + "<br/>(Press again to confirm your answer)";
+						lookup("option"+option).innerHTML = JSON.parse(question)["option"+option] + "<img class='wrong' id='answerwrong' src='wrong.png'/>" + "<br/>(Press again to confirm your answer)";
 					}
 				}
 				selection = option;
