--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 </div>
 	  <script>
     function login(){
-      window.location.href="/auth/google";
+      //window.location.href="/auth/google";
     }
   </script>
 </body>
