--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 <div class="container">
     <div class="helper">
         <div class="content">
-            <img style=" height:70px;" src="../public/loading.gif"/>
+            <img style=" height:70px;" src="/loading"/>
             <div style=" display:inline; position: relative; top:-30px; color:#333; font-family: Roboto, Segoe UI Semilight, Helvetica, Segoe UI, Arial; width:200px; height:70px;">Logging you in with Google</div>
         </div>
     </div>
