--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="/favicon.ico">
   <title>Mid-autumn quiz!</title>
   <style>
   	.container {
@@ -39,7 +41,7 @@
 </div>
 	  <script>
     function login(){
-      //window.location.href="/auth/google";
+      window.location.href="/auth/google";
     }
   </script>
 </body>
