--- a/public/quiz.html
+++ b/public/quiz.html
@@ -117,7 +117,7 @@
             if (attempts > 3){
             	var correctanswers = 0;
             	if(localStorage.getItem("correctanswers")){
-            		correctanswers =Number(localStorage.getItem("correctanswers");
+            		correctanswers =Number(localStorage.getItem("correctanswers"));
             	}
               alert("You have scored " + correctanswers + " out of 5 questions!");
               finito(correctanswers);
